# version with ajax-method

--- a/public/blog-items.html
+++ b/public/blog-items.html
@@ -1,5 +1,5 @@
 
-<figure class="blog-info ico-management"><img src="../images/blog/blog-image1.png" alt="post image"/>
+<figure class="blog-info ico-management"><img src="./images/blog/blog-image1.png" alt="post image"/>
   <figcaption>
     <div class="date">
       <div class="date-wrapper"><span>Feb</span>
@@ -9,10 +9,10 @@
     <h5 class="title">BlackBerry Stock Hits Key Support After Sell Rating</h5>
     <div class="category"><span>Ico Marketing</span></div>
     <div class="text"><span>BlackBerry shares moved lower on Goldman's negative view, but traders should watch these</span></div>
-    <div class="button-wrapper clearfix"><a class="button" href="javascript:void(0)">Read</a></div>
+    <div class="button-wrapper clearfix"><a class="button" href="news-post.html" data-type="page-transition">Read</a></div>
   </figcaption>
 </figure>
-<figure class="blog-info ico-management cryptocurrency"><img src="../images/blog/blog-image2.png" alt="post image"/>
+<figure class="blog-info ico-management cryptocurrency"><img src="./images/blog/blog-image2.png" alt="post image"/>
   <figcaption>
     <div class="date">
       <div class="date-wrapper"><span>Feb</span>
@@ -22,10 +22,10 @@
     <h5 class="title">Netflix Makes First Acquisition With Comics Buy</h5>
     <div class="category"><span>Ico Marketing</span></div>
     <div class="text"><span>The video streaming service acquired a comic book publisher in a move to bolster its content portfolio.</span></div>
-    <div class="button-wrapper clearfix"><a class="button" href="javascript:void(0)">Read</a></div>
+    <div class="button-wrapper clearfix"><a class="button" href="news-post.html" data-type="page-transition">Read</a></div>
   </figcaption>
 </figure>
-<figure class="blog-info ico-management"><img src="../images/blog/blog-image3.png" alt="post image"/>
+<figure class="blog-info ico-management"><img src="./images/blog/blog-image3.png" alt="post image"/>
   <figcaption>
     <div class="date">
       <div class="date-wrapper"><span>Feb</span>
@@ -35,10 +35,10 @@
     <h5 class="title">Bitcoin Is Now Bigger Than These 4 Companies</h5>
     <div class="category"><span>Ico Marketing</span></div>
     <div class="text"><span>From a slice of pizza to $50 billion. How Bitcoin has outpaced these four companies</span></div>
-    <div class="button-wrapper clearfix"><a class="button" href="javascript:void(0)">Read</a></div>
+    <div class="button-wrapper clearfix"><a class="button" href="news-post.html" data-type="page-transition">Read</a></div>
   </figcaption>
 </figure>
-<figure class="blog-info ico-management"><img src="../images/blog/blog-image4.png" alt="post image"/>
+<figure class="blog-info ico-management"><img src="./images/blog/blog-image4.png" alt="post image"/>
   <figcaption>
     <div class="date">
       <div class="date-wrapper"><span>Feb</span>
@@ -48,10 +48,10 @@
     <h5 class="title">Banks Are Hidden Gems For Investors, Goldman Says</h5>
     <div class="category"><span>Ico Marketing</span></div>
     <div class="text"><span>Bank stocks will be fueled by huge stock buybacks and dividend hikes, Goldman says</span></div>
-    <div class="button-wrapper clearfix"><a class="button" href="javascript:void(0)">Read</a></div>
+    <div class="button-wrapper clearfix"><a class="button" href="news-post.html" data-type="page-transition">Read</a></div>
   </figcaption>
 </figure>
-<figure class="blog-info ico-management"><img src="../images/blog/blog-image5.png" alt="post image"/>
+<figure class="blog-info ico-management"><img src="./images/blog/blog-image5.png" alt="post image"/>
   <figcaption>
     <div class="date">
       <div class="date-wrapper"><span>Apr</span>
@@ -61,10 +61,10 @@
     <h5 class="title">Alibaba Partners with Marriott, Pushes Into Hotels</h5>
     <div class="category"><span>Ico Marketing</span></div>
     <div class="text"><span>The two struck a deal in which Chinese consumers can book a stay via Alibaba and Alipay.</span></div>
-    <div class="button-wrapper clearfix"><a class="button" href="javascript:void(0)">Read</a></div>
+    <div class="button-wrapper clearfix"><a class="button" href="news-post.html" data-type="page-transition">Read</a></div>
   </figcaption>
 </figure>
-<figure class="blog-info ico-management cryptocurrency"><img src="../images/blog/blog-image6.png" alt="post image"/>
+<figure class="blog-info ico-management cryptocurrency"><img src="./images/blog/blog-image6.png" alt="post image"/>
   <figcaption>
     <div class="date">
       <div class="date-wrapper"><span>Dec</span>
@@ -74,10 +74,10 @@
     <h5 class="title">Why Big Tech Stocks Have 9% Upside</h5>
     <div class="category"><span>Ico Marketing</span></div>
     <div class="text"><span>The technology sector is outperforming the broader market but can still soar over the next few months.</span></div>
-    <div class="button-wrapper clearfix"><a class="button" href="javascript:void(0)">Read</a></div>
+    <div class="button-wrapper clearfix"><a class="button" href="news-post.html" data-type="page-transition">Read</a></div>
   </figcaption>
 </figure>
-<figure class="blog-info ico-management"><img src="../images/blog/blog-image7.png" alt="post image"/>
+<figure class="blog-info ico-management"><img src="./images/blog/blog-image7.png" alt="post image"/>
   <figcaption>
     <div class="date">
       <div class="date-wrapper"><span>Dec</span>
@@ -87,10 +87,10 @@
     <h5 class="title">CapEX Kings: Which S&P 500 Cos. Spend the Most</h5>
     <div class="category"><span>Ico Marketing</span></div>
     <div class="text"><span>Goldman Sachs is out with a report showing the importance of capex spending.</span></div>
-    <div class="button-wrapper clearfix"><a class="button" href="javascript:void(0)">Read</a></div>
+    <div class="button-wrapper clearfix"><a class="button" href="news-post.html" data-type="page-transition">Read</a></div>
   </figcaption>
 </figure>
-<figure class="blog-info ico-management"><img src="../images/blog/blog-image8.png" alt="post image"/>
+<figure class="blog-info ico-management"><img src="./images/blog/blog-image8.png" alt="post image"/>
   <figcaption>
     <div class="date">
       <div class="date-wrapper"><span>Dec</span>
@@ -100,10 +100,10 @@
     <h5 class="title">Another ETF to Consider as the Dow Soars</h5>
     <div class="category"><span>Ico Marketing</span></div>
     <div class="text"><span>There is another Dow ETF that income investors may want to consider.</span></div>
-    <div class="button-wrapper clearfix"><a class="button" href="javascript:void(0)">Read</a></div>
+    <div class="button-wrapper clearfix"><a class="button" href="news-post.html" data-type="page-transition">Read</a></div>
   </figcaption>
 </figure>
-<figure class="blog-info ico-management"><img src="../images/blog/blog-image9.png" alt="post image"/>
+<figure class="blog-info ico-management"><img src="./images/blog/blog-image9.png" alt="post image"/>
   <figcaption>
     <div class="date">
       <div class="date-wrapper"><span>Oct</span>
@@ -113,10 +113,10 @@
     <h5 class="title">Disney Bulls Hold an Edge Into Earnings</h5>
     <div class="category"><span>Ico Marketing</span></div>
     <div class="text"><span>Disney is well positioned for a buy-the-news reaction to this week's earnings report, despite a tough second quarter.</span></div>
-    <div class="button-wrapper clearfix"><a class="button" href="javascript:void(0)">Read</a></div>
+    <div class="button-wrapper clearfix"><a class="button" href="news-post.html" data-type="page-transition">Read</a></div>
   </figcaption>
 </figure>
-<figure class="blog-info ico-management cryptocurrency"><img src="../images/blog/blog-image10.png" alt="post image"/>
+<figure class="blog-info ico-management cryptocurrency"><img src="./images/blog/blog-image10.png" alt="post image"/>
   <figcaption>
     <div class="date">
       <div class="date-wrapper"><span>Oct</span>
@@ -126,10 +126,10 @@
     <h5 class="title">Nvidia's Stock Poised to Reach $200</h5>
     <div class="category"><span>Ico Marketing</span></div>
     <div class="text"><span>Nvidia stock could soar to $200 if its forthcoming 2Q financial results blow away street estimates.</span></div>
-    <div class="button-wrapper clearfix"><a class="button" href="javascript:void(0)">Read</a></div>
+    <div class="button-wrapper clearfix"><a class="button" href="news-post.html" data-type="page-transition">Read</a></div>
   </figcaption>
 </figure>
-<figure class="blog-info ico-management"><img src="../images/blog/blog-image11.png" alt="post image"/>
+<figure class="blog-info ico-management"><img src="./images/blog/blog-image11.png" alt="post image"/>
   <figcaption>
     <div class="date">
       <div class="date-wrapper"><span>Nov</span>
@@ -139,10 +139,10 @@
     <h5 class="title">Fees Matter With Gold ETFs, Too</h5>
     <div class="category"><span>Ico Marketing</span></div>
     <div class="text"><span>Fees matter with ETFs, and that also pertains to gold ETFs.</span></div>
-    <div class="button-wrapper clearfix"><a class="button" href="javascript:void(0)">Read</a></div>
+    <div class="button-wrapper clearfix"><a class="button" href="news-post.html" data-type="page-transition">Read</a></div>
   </figcaption>
 </figure>
-<figure class="blog-info ico-management"><img src="../images/blog/blog-image12.png" alt="post image"/>
+<figure class="blog-info ico-management"><img src="./images/blog/blog-image12.png" alt="post image"/>
   <figcaption>
     <div class="date">
       <div class="date-wrapper"><span>Nov</span>
@@ -152,6 +152,6 @@
     <h5 class="title">What are the Safest Ways to Store Bitcoin?</h5>
     <div class="category"><span>Ico Marketing</span></div>
     <div class="text"><span>As Bitcoin and other cryptocurrencies expand, hackers see new potential for thefts. How do you keep your digital</span></div>
-    <div class="button-wrapper clearfix"><a class="button" href="javascript:void(0)">Read</a></div>
+    <div class="button-wrapper clearfix"><a class="button" href="news-post.html" data-type="page-transition">Read</a></div>
   </figcaption>
 </figure>
