--- a/public/assets/plugins/fullPage.js/examples/activeSlide.html
+++ b/public/assets/plugins/fullPage.js/examples/activeSlide.html
@@ -86,27 +86,27 @@
 </select>
 
 <div id="fullpage">
-    <div class="section " id="section0">
+    <div class="section ">
         <h1>fullPage.js</h1>
         <p>Continuous Scrolling Enabled</p>
         <img src="imgs/fullPage.png" alt="fullPage" />
     </div>
-    <div class="section active" id="section1">
-        <div class="slide" id="slide1">
-            <div class="intro">
+    <div class="section active">
+        <div class="slide" data-anchor="slide1">
+           <!--  <div class="intro">
                 <h1>Around the world scrolling</h1>
                 <p>Go to the first section and scroll up or to the last one and scroll down to see how it works.</p>
-            </div>
+            </div> -->
         </div>
-        <div class="slide active" id="slide2">
-            <h1>Slide 2</h1>
+        <div class="slide" data-anchor="slide2">
+            <!-- <h1>Slide 2</h1> -->
         </div>
-        <div class="slide" id="slide3">
-            <h1>Slide 3</h1>
+        <div class="slide" data-anchor="slide3">
+            <!-- <h1>Slide 3</h1> -->
         </div>
 
     </div>
-    <div class="section" id="section2">
+    <div class="section">
         <div class="intro">
             <h1>Scroll Down</h1>
             <p>And it will animate down to the first section</p>
