--- a/public/sale-table.html
+++ b/public/sale-table.html
@@ -23,10 +23,10 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2196f3">
     <link href="css/template.css" rel="stylesheet">
   </head>
-  <body data-page="index">
+  <body data-page="sale-table">
     <div class="main-wrapper">
-      <div class="submain-wrapper" data-page="index">
-        <header class="header bg-white" data-page="index">
+      <div class="submain-wrapper" data-page="sale-table">
+        <header class="header bg-white" data-page="sale-table">
           <nav class="navbar clearfix">
             <div class="navbar-left">
               <div class="back-title to-news"><a href="news.html" data-type="page-transition">News</a></div>
@@ -71,7 +71,7 @@
           </nav>
           <!--/.navbar-->
         </header>
-        <aside class="sidebar" data-page="index">
+        <aside class="sidebar" data-page="sale-table">
           <div class="navbar-left">
             <button class="navbar-toggle" id="menu-button" type="button"><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand clearfix" href="/"><img src="./images/logotype.svg"><span class="description">Your Edge in Cryptocurrency Ecosystem</span></a>
           </div>
@@ -96,13 +96,13 @@
           </div>
           <div class="left" id="sidebar-navigation">
             <ul>
-              <li><a class="active" href="index.html" data-type="page-transition"><span></span></a>
+              <li><a href="index.html" data-type="page-transition"><span></span></a>
                 <div class="navigation-tooltip left">Homepage</div>
               </li>
               <li><a href="membership.html" data-type="page-transition"><span></span></a>
                 <div class="navigation-tooltip left">Exclusive Membership</div>
               </li>
-              <li><a href="sale-table.html" data-type="page-transition"><span></span></a>
+              <li><a class="active" href="sale-table.html" data-type="page-transition"><span></span></a>
                 <div class="navigation-tooltip left">Pre-Sale Table</div>
               </li>
               <li><a href="market-pulse.html" data-type="page-transition"><span></span></a>
@@ -122,64 +122,126 @@
         </aside>
         <div class="section-wrapper">
           <div class="section">
-            <div class="text-center pt-120">
-              <h1 class="h1">
-                ICO Investment
-                <strong>Advisory</strong>
-              </h1>
-              <div class="intro">Free access to premium research & analytics, early IOU trading and advanced risk-management</div>
-              <div class="promo">
-                <ul>
-                  <li><span>500 Customers</span></li>
-                  <li><span>$2M Under Managment</span></li>
-                  <li><span>300% ROI p.a.</span></li>
-                  <li><span>12 Successful Deals</span></li>
-                </ul>
-              </div>
-              <div class="join icon"><a href="javascript:void(0)">Join Public Group</a></div>
-              <div class="info-slider owl-carousel owl-theme">
-                <div class="item">
-                  <div class="image"><img src="./images/info-slide1.png" alt="image"></div>
-                  <div class="text"><span>
-                      Only 3 days left to join DS Pre-Sale ICO. 30% 30-day ROI.
-                      <a href="javascript:void(0)">Join</a>
-                      today</span></div>
-                </div>
-                <div class="item">
-                  <div class="image"><img src="./images/info-slide2.png" alt="image"></div>
-                  <div class="text"><span>
-                      IOU exchange now active with 4 seats remaining.
-                      <a href="javascript:void(0)">Sign Up</a>
-                      now!</span></div>
-                </div>
-                <div class="item">
-                  <div class="image"><img src="./images/info-slide3.png" alt="image"></div>
-                  <div class="text"><span>
-                      IClub exclusive membership bidding rounds open Sep 1, 17.
-                      <a class="border-b" href="javascript:void(0)">Complete Application</a>
-                      form before deadline.</span></div>
-                </div>
-                <div class="item">
-                  <div class="image"><img src="./images/info-slide1.png" alt="image"></div>
-                  <div class="text"><span>
-                      Only 3 days left to join DS Pre-Sale ICO. 30% 30-day ROI.
-                      <a href="javascript:void(0)">Join</a>
-                      today</span></div>
-                </div>
-                <div class="item">
-                  <div class="image"><img src="./images/info-slide2.png" alt="image"></div>
-                  <div class="text"><span>
-                      IOU exchange now active with 4 seats remaining.
-                      <a href="javascript:void(0)">Sign Up</a>
-                      now!</span></div>
-                </div>
-                <div class="item">
-                  <div class="image"><img src="./images/info-slide3.png" alt="image"></div>
-                  <div class="text"><span>
-                      IClub exclusive membership bidding rounds open Sep 1, 17.
-                      <a class="border-b" href="javascript:void(0)">Complete Application</a>
-                      form before deadline.</span></div>
-                </div>
+            <div class="text-center pt-120 ml-150">
+              <h1 class="h1">Upcoming ICOs and Pre-Sales</h1>
+              <div class="intro">Don't miss out on the following upcoming pre-sale opportunities</div>
+              <div class="pre-sale mt-50 mb-150">
+                <table>
+                  <tr>
+                    <td>
+                      <div class="image"><img src="./images/logos/ico-convert.png" alt="image"></div>
+                      <div class="pre-date"><span>Pre-Sale date</span>
+                        Jul-25-17
+                      </div>
+                      <div class="public-date"><span>
+                          Public ICO date
+                          <b>Aug-24-17</b></span></div>
+                    </td>
+                    <td>
+                      <div class="image"><img src="./images/logos/ico-crowd.png" alt="image"></div>
+                      <div class="pre-date"><span>Pre-Sale date</span>
+                        Jul-25-17
+                      </div>
+                      <div class="public-date"><span>
+                          Public ICO date
+                          <b>Aug-24-17</b></span></div>
+                    </td>
+                    <td>
+                      <div class="image"><img src="./images/logos/boxer.png" alt="image"></div>
+                      <div class="pre-date"><span>Pre-Sale date</span>
+                        Jul-25-17
+                      </div>
+                      <div class="public-date"><span>
+                          Public ICO date
+                          <b>Aug-24-17</b></span></div>
+                    </td>
+                    <td>
+                      <div class="image"><img src="./images/logos/diversify.png" alt="image"></div>
+                      <div class="pre-date"><span>Pre-Sale date</span>
+                        Jul-25-17
+                      </div>
+                      <div class="public-date"><span>
+                          Public ICO date
+                          <b>Aug-24-17</b></span></div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <div class="image"><img src="./images/logos/ico-group.png" alt="image"></div>
+                      <div class="pre-date"><span>Pre-Sale date</span>
+                        Jul-25-17
+                      </div>
+                      <div class="public-date"><span>
+                          Public ICO date
+                          <b>Aug-24-17</b></span></div>
+                    </td>
+                    <td>
+                      <div class="image"><img src="./images/logos/iconomi.png" alt="image"></div>
+                      <div class="pre-date"><span>Pre-Sale date</span>
+                        Jul-25-17
+                      </div>
+                      <div class="public-date"><span>
+                          Public ICO date
+                          <b>Aug-24-17</b></span></div>
+                    </td>
+                    <td>
+                      <div class="image"><img src="./images/logos/onegram.png" alt="image"></div>
+                      <div class="pre-date"><span>Pre-Sale date</span>
+                        Jul-25-17
+                      </div>
+                      <div class="public-date"><span>
+                          Public ICO date
+                          <b>Aug-24-17</b></span></div>
+                    </td>
+                    <td>
+                      <div class="image"><img src="./images/logos/deloitte.png" alt="image"></div>
+                      <div class="pre-date"><span>Pre-Sale date</span>
+                        Jul-25-17
+                      </div>
+                      <div class="public-date"><span>
+                          Public ICO date
+                          <b>Aug-24-17</b></span></div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <div class="image"><img src="./images/logos/ico-group.png" alt="image"></div>
+                      <div class="pre-date"><span>Pre-Sale date</span>
+                        Jul-25-17
+                      </div>
+                      <div class="public-date"><span>
+                          Public ICO date
+                          <b>Aug-24-17</b></span></div>
+                    </td>
+                    <td>
+                      <div class="image"><img src="./images/logos/iconomi.png" alt="image"></div>
+                      <div class="pre-date"><span>Pre-Sale date</span>
+                        Jul-25-17
+                      </div>
+                      <div class="public-date"><span>
+                          Public ICO date
+                          <b>Aug-24-17</b></span></div>
+                    </td>
+                    <td>
+                      <div class="image"><img src="./images/logos/onegram.png" alt="image"></div>
+                      <div class="pre-date"><span>Pre-Sale date</span>
+                        Jul-25-17
+                      </div>
+                      <div class="public-date"><span>
+                          Public ICO date
+                          <b>Aug-24-17</b></span></div>
+                    </td>
+                    <td>
+                      <div class="image"><img src="./images/logos/deloitte.png" alt="image"></div>
+                      <div class="pre-date"><span>Pre-Sale date</span>
+                        Jul-25-17
+                      </div>
+                      <div class="public-date"><span>
+                          Public ICO date
+                          <b>Aug-24-17</b></span></div>
+                    </td>
+                  </tr>
+                </table>
               </div>
             </div>
           </div>
